Fixed office photos alignment

--- a/css/style.css
+++ b/css/style.css
@@ -173,28 +173,27 @@ h2::after {
   margin-top: 20px;
 }
 .cabinet_photos {
-  margin: 50px;
+  margin: 50px 0px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 50px;
 }
-.cabinet_photos_row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.cabinet_photos--1 {
+  grid-row: 1/span 1;
+  grid-column: 1/span 4;
 }
-.cabinet_photos_row:last-of-type {
-  margin-top: 50px;
+.cabinet_photos--2 {
+  grid-row: 1/span 1;
+  grid-column: 5/span 8;
 }
-.cabinet_photos_square {
-  width: 30%;
+.cabinet_photos--3 {
+  grid-row: 2/span 1;
+  grid-column: 1/span 8;
 }
-.cabinet_photos_square:last-of-type {
-  margin-left: 50px;
-}
-.cabinet_photos_rectangle {
-  width: 60%;
-}
-.cabinet_photos_rectangle:last-of-type {
-  margin-left: 50px;
+.cabinet_photos--4 {
+  grid-row: 2/span 1;
+  grid-column: 9/span 4;
 }
 
 .prestations {
